--- a/frontend/src/layouts/Layout.astro
+++ b/frontend/src/layouts/Layout.astro
@@ -1,51 +1,37 @@
 ---
+import "@/styles/globals.css";
 interface Props {
-	title: string;
+  title: string;
 }
 
 const { title } = Astro.props;
 ---
 
-<!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body>
-		<slot />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Astro description" />
+    <meta name="viewport" content="width=device-width" />
+    <script src="/htmx.min.js" is:inline></script>
+    <script src="/alpine.min.js" defer is:inline></script>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+  </head>
+  <body x-cloak :class="theme?'dark':''" x-data="{theme: false }" x-init="
+  if (!document.cookie.includes('theme')) {
+      if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+        theme = true;
+        document.cookie = 'theme=Bearer true;path=/';
+      } else {
+        theme = false;
+        document.cookie = 'theme=Bearer false;path=/';
+      }
+} else if (document.cookie.includes('theme=Bearer true')) {
+	theme = true;
+} else if (document.cookie.includes('theme=Bearer false')) {
+	theme = false;
+}; htmx.config.useTemplateFragments = true;">
+    <slot />
+  </body>
 </html>
-<style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #13151a;
-		background-size: 224px;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
-</style>
